--- a/package.json
+++ b/package.json
@@ -8,7 +8,8 @@
     "start": "next start",
     "lint": "next lint",
     "export": "next build && next export",
-    "deploy": "next build && next export && touch out/.nojekyll && gh-pages -d out"
+    "deploy": "next build && next export && touch out/.nojekyll && gh-pages -d out",
+    "seed:firestore": "node --experimental-modules scripts/seedFirestore.js"
   },
   "dependencies": {
     "@headlessui/react": "^1.6.6",
@@ -18,6 +19,7 @@
     "gsap": "^3.10.4",
     "next": "12.1.6",
     "next-themes": "^0.2.0",
+    "nodemailer": "^7.0.5",
     "parse-numeric-range": "^1.3.0",
     "postcss": "^8.4.13",
     "react": "18.1.0",
